<resources>
    <string name="app_name">VitoLugini</string>

    <string name="loginName">Escribe tu nombre de usuario</string>

    <string name="txtPass">Escribe tu Contraseña</string>

    <string name="btnLogin">Entrar</string>

    <string name="btnSalir">Salir</string>

    <string name="btnAtrasToLogin">Atras</string>

    <string name="PizzaNameMenu">Pizzas</string>

    <string name="PepsiNameMenu">Refrescos</string>


</resources>