<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gato1"

            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtuser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="270dp"
            android:text="@string/loginName"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold"
            />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/eiduser"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="290dp"
                android:textColor="#000000"
                android:textSize="15dp"
                tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtpass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="370dp"
            android:text="@string/txtPass"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold"


            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edipass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="400dp"
            android:textColor="#000000"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="textPassword"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btninicio"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="450dp"
            android:layout_marginRight="10dp"
            android:text="@string/btnLogin" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">




        <Button
            android:id="@+id/btncancelar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="650dp"
            android:layout_marginLeft="140dp"
            android:text="@string/btnSalir" />

    </LinearLayout>



</RelativeLayout >